--- a/0x07/api-rest-calculator/src/main/resources/application.properties
+++ b/0x07/api-rest-calculator/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.servlet.context-path=/user-api
+#server.servlet.context-path=/user-api
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
